# BioLogik

./: .gitignore  .prettierignore  eslint.config.js  package.json  tsconfig.base.json
.openspec/agents/: backend-agent.md  frontend-agent.md  orchestrator.md
.openspec/architecture/: auth-flow.md  backend-architecture.md  database-design.md  frontend-architecture.md  permissions.md  system-design.md
.openspec/branding/: colors.md  design-system.md  logo-rules.md  typography.md  ui-guidelines.md
.openspec/product/: business-rules.md  glossary.md  roadmap.md  user-roles.md  vision.md
.openspec/standards/: coding-standards.md  folder-structure.md  naming.md
.openspec/ux/: admin-panel.md  customer-app.md  kitchen-panel.md  landing.md  navigation-flows.md  nutritionist-panel.md
apps/admin-web/: index.html  package.json  (+2 more)
apps/backend-api/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
apps/backend-api/alembic/: env.py
apps/backend-api/app/: main.py
apps/backend-api/app/api/: deps.py
apps/backend-api/app/api/v1/: auth.py  health.py  router.py
apps/backend-api/app/core/: config.py  database.py  exceptions.py  logging.py  security.py
apps/backend-api/app/models/: __init__.py  appointment.py  base.py  meal.py  order.py  patient_progress.py  subscription.py  user.py
apps/backend-api/app/repositories/: __init__.py  base.py  user_repository.py
apps/backend-api/app/schemas/: __init__.py  auth.py  common.py  user.py
apps/backend-api/app/services/: __init__.py  auth_service.py  user_service.py
apps/backend-api/tests/: conftest.py
(+53 files in other folders)
